sloupce tabulky her maji popisky, ktere se pouziji v ovladaci sloupcu

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+00916 - sloupce tabulky her maji popisky, ktere se pouziji v ovladaci sloupcu
 00603b - nesoutezni hry nemaji panel s rekordama
 00603a - platform name a icon sloupce
 00603 - enum platforem a par ikonek
