--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -7,6 +7,7 @@ ArcadeMode.NAME = Automatovky
 
 AverageRatingsColumn.NAME    = H%
 AverageRatingsColumn.TOOLTIP = Pr\u016fm\u011brn\u00e9 hodnocen\u00ed
+AverageRatingsColumn.DESCRIPTION = Pr\u016fm\u011brn\u00e9 hodnocen\u00ed
 
 BestPlayerColumn.NAME    = nej
 BestPlayerColumn.TOOLTIP = Nejlep\u0161\u00ed hr\u00e1\u010d
@@ -60,15 +61,15 @@ PlayerCountColumn.NAME    = #\u2211
 PlayerCountColumn.TOOLTIP = Celkov\u00fd po\u010det hr\u00e1\u010d\u016f dan\u00e9 hry
 
 PlayerDiffColumn.NAME    = +/-
-PlayerDiffColumn.TOOLTIP = Rozd\u00edl um\u00edsten\u00ed mezi hr\u00e1\u010dem a protihr\u00e1\u010dem
+PlayerDiffColumn.TOOLTIP = Rozd\u00edl v um\u00edsten\u00ed s protihr\u00e1\u010dem
 
 PlayerListRenderer._NEW = P\u0159idej
 
 PointsColumn.NAME    = body
-PointsColumn.TOOLTIP = bodov\u00fd zisk pro dan\u00e9ho hr\u00e1\u010de
+PointsColumn.TOOLTIP = Bodov\u00fd zisk hr\u00e1\u010de
 
 ChanceColumn.NAME = zisk
-ChanceColumn.TOOLTIP =kolik bod\u016f m\u016f\u017ee hr\u00e1\u010d z\u00edskat
+ChanceColumn.TOOLTIP =Kolik bod\u016f m\u016f\u017ee hr\u00e1\u010d z\u00edskat
 ChanceColumn.PREFERENCE =protihr\u00e1\u010d
 
 PositionColumn.NAME    = #
