refactoring - pridani event bus

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+00919 - refactoring: pridani bus eventu
 00916a - odkaz na MAWS ma ikonku
 00916 - sloupce tabulky her maji popisky, ktere se pouziji v ovladaci sloupcu
 00603b - nesoutezni hry nemaji panel s rekordama
