--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+00924 - refactoring: jeste dalsi rozsireni event busu
 00922 - refactoring: dalsi rozsireni event busu
 00919 - refactoring: pridani bus eventu
 00916a - odkaz na MAWS ma ikonku
