inicializacni splash screen s progress barem
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+00926 - splash screen s progressbarem, upravy importeru
 00924 - refactoring: jeste dalsi rozsireni event busu
 00922 - refactoring: dalsi rozsireni event busu
 00919 - refactoring: pridani bus eventu
