--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+00926b - oprava zobrazovani % progress baru ve splashi
 00926a - inicializace GUI pridana do splash screenu
 00926 - splash screen s progressbarem, upravy importeru
 00924 - refactoring: jeste dalsi rozsireni event busu
