zobrazování počtu stažených B/KB/MB ve splashi
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+00928 - zobrazování poètu stažených B/KB/MB ve splashi
 00926b - oprava zobrazovani % progress baru ve splashi
 00926a - inicializace GUI pridana do splash screenu
 00926 - splash screen s progressbarem, upravy importeru
