moznost pridat sloupce delky rekordu v tabulce rekordu
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -77,6 +77,9 @@ PositionColumn.TOOLTIP = Um\u00edst\u011bn\u00ed
 
 RecordPlayerColumn.NAME = hr\u00e1\u010d
 
+RecordDurationColumn.NAME = \u010das
+RecordDurationColumn.TOOLTIP = d\u00e9lka hran\u00ed v H:M:S
+
 PlatformNameColumn.NAME=Platforma
 PlatformIconColumn.NAME=P
 
