--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -28,6 +28,9 @@ ScoreRecordColumn.NAME=sc\u00f3re
 
 RecordPlayerColumn.NAME=hr\u00e1\u010d
 
+RecordDurationColumn.NAME = time
+RecordDurationColumn.TOOLTIP = record time duration
+
 CategoryListRenderer.ALL=v\u0161echny kategorie
 
 MainWindow.TITLE=ARX - an Alternative RotaXmame
