--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+01006 - prvni pokus o resizetalny panel rekordu
 01004 - moznost pridat sloupce delky rekordu v tabulce rekordu
 00928 - zobrazování poètu stažených B/KB/MB ve splashi
 00926b - oprava zobrazovani % progress baru ve splashi
