popisek sloupce dohran + defaultne je schovany přidán sloupec "dohráno" do tabulky rekordů
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,4 +1,5 @@
-01006 - prvni pokus o resizetalny panel rekordu
+01006 - pøidán sloupec "dohráno" do tabulky rekordù
+01005 - prvni pokus o resizetalny panel rekordu
 01004 - moznost pridat sloupce delky rekordu v tabulce rekordu
 00928 - zobrazování poètu stažených B/KB/MB ve splashi
 00926b - oprava zobrazovani % progress baru ve splashi
