--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -41,6 +41,9 @@ CoplayerColumn.NAME = spoluhr\u00e1\u010d
 FinishedColumn.NAME    = F
 FinishedColumn.TOOLTIP = Dohr\u00e1no do konce?
 
+FinishedRecordColumn.NAME = F
+FinishedRecordColumn.TOOLTIP = Dohr\u00e1no do konce?
+
 GameNameColumn.NAME = n\u00e1zev
 GameNameColumn.NAME = N\u00e1zev hry
 
