--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -8,7 +8,11 @@ AverageRatingsColumn.NAME=H%
 AverageRatingsColumn.TOOLTIP=Pr\u016fm\u011brn\u00e9 hodnocen\u00ed
 
 FinishedColumn.NAME=F
-FinishedColumn.TOOLTIP=Dohr\u00e1no do konce?
+FinishedColumn.TOOLTIP=Finished to the end?
+
+FinishedRecordColumn.NAME = F
+FinishedRecordColumn.TOOLTIP = Finished to the end?
+
 PointsColumn.NAME=points
 
 ChanceColumn.NAME = gain
