opraveno rozsirovani panelu rekordu pri pridani/odebrani sloupce
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+01020 - opraveno rozsirovani panelu rekordu pri pridani/odebrani sloupce
 01006 - pøidán sloupec "dohráno" do tabulky rekordù
 01005 - prvni pokus o resizetalny panel rekordu
 01004 - moznost pridat sloupce delky rekordu v tabulce rekordu
