pridan druhy hrac do tabulky rekordu ve dvojhrach
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -36,7 +36,8 @@ CategoryListRenderer.ALL = v\u0161echny kategorie
 
 ChatButton.LABEL = Chat
 
-CoplayerColumn.NAME = spoluhr\u00e1\u010d
+CoplayerColumn.TOOLTIP = spoluhr\u00e1\u010d
+CoplayerColumn.NAME = 2.H
 
 FinishedColumn.NAME    = F
 FinishedColumn.TOOLTIP = Dohr\u00e1no do konce?
