--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+01021 - pridan druhy hrac do tabulky rekordu ve dvojhrach
 01020 - opraveno rozsirovani panelu rekordu pri pridani/odebrani sloupce
 01006 - pøidán sloupec "dohráno" do tabulky rekordù
 01005 - prvni pokus o resizetalny panel rekordu
