--- a/changelog
+++ b/changelog
@@ -1,3 +1,5 @@
+10320 - lepsi okno s licencema
+01022 - zakladni nacrtek okna s licencema
 01021a - opraveny popisky sloupcu ve sprave sloupcu tabulky rekordu
 01021 - pridan druhy hrac do tabulky rekordu ve dvojhrach
 01020 - opraveno rozsirovani panelu rekordu pri pridani/odebrani sloupce
