--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -54,6 +54,7 @@ GameNameColumn.NAME = N\u00e1zev hry
 HelpComboBox.CREDITS   = Pod\u011bkov\u00e1n\u00ed
 HelpComboBox.LABEL     = N\u00e1pov\u011bda
 HelpComboBox.ROTAXMAME = RotaxMAME
+HelpComboBox.LICENCE   = Licence
 
 LegacyInfoColumns.NAME = H
 
