--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -48,6 +48,7 @@ CoplayerColumn.NAME=spoluhr\u00e1\u010d
 HelpComboBox.LABEL=Help
 HelpComboBox.ROTAXMAME=RotaxMAME
 HelpComboBox.CREDITS=Credits
+HelpComboBox.LICENCE   = Licences
 PlayerCountColumn.NAME=#\u2211
 PlayerCountColumn.TOOLTIP=Celkov\u00fd po\u010det hr\u00e1\u010d\u016f dan\u00e9 hry
 
