10328 - lepsi zapinani a vypinani chatu
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+10328 - lepsi zapinani a vypinani chatu
 10320 - lepsi okno s licencema
 01022 - zakladni nacrtek okna s licencema
 01021a - opraveny popisky sloupcu ve sprave sloupcu tabulky rekordu
