10328a - hezci zapinani a vypinani chatu pomoci toggle buttonu
Signed-off-by: Tom <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+10328a - hezci zapinani a vypinani chatu pomoci toggle buttonu
 10328 - lepsi zapinani a vypinani chatu
 10320 - lepsi okno s licencema
 01022 - zakladni nacrtek okna s licencema
