--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+10328b - je mozne si nastavit oponenta/protihrace, issue #29
 10328a - hezci zapinani a vypinani chatu pomoci toggle buttonu
 10328 - lepsi zapinani a vypinani chatu
 10320 - lepsi okno s licencema
