ukladani databaze pro import do tempu

--- a/changelog
+++ b/changelog
@@ -1,3 +1,6 @@
+10410b - ukladani databaze pro import do tempu
+10410a - obrazky her se neukladaji na disk
+10410 - nahravani obrazku i z jarek 
 10328b - je mozne si nastavit oponenta/protihrace, issue #29
 10328a - hezci zapinani a vypinani chatu pomoci toggle buttonu
 10328 - lepsi zapinani a vypinani chatu
