10413 - spravne nacitani okenni ikonky i z jarka
Signed-off-by: Kojotak <Tom@KOJOT_R61>

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+10413 - spravne nacitani okenni ikonky i z jarka
 10410b - ukladani databaze pro import do tempu
 10410a - obrazky her se neukladaji na disk
 10410 - nahravani obrazku i z jarek 
