10413a - opravene pocitani progressu ve splash screenu, issue #34

--- a/changelog
+++ b/changelog
@@ -1,3 +1,4 @@
+10413a - opravene pocitani progressu ve splash screenu, issue #34
 10413 - spravne nacitani okenni ikonky i z jarka
 10410b - ukladani databaze pro import do tempu
 10410a - obrazky her se neukladaji na disk
