--- a/src/cz/kojotak/arx/properties/Licence_cs.properties
+++ b/src/cz/kojotak/arx/properties/Licence_cs.properties
@@ -3,8 +3,9 @@ SWING_X.DESC=Nov\u00e9/roz\u0161\u00ed\u0159en\u00e9 komponenty pro Swing
 CHM_PANE.DESC=Knihovna pro zobrazov\u00e1n\u00ed n\u00e1pov\u011bdy ve form\u00e1tu chm
 IMAGE4J.DESC=Knihovna pro \u010dten\u00ed obr\u00e1zk\u016f ve form\u00e1tu bmp a ico
 LOMBOK.DESC=Knihovna zjednodu\u0161uj\u00edc\u00ed programov\u00e1n\u00ed v jav\u011b pomoc\u00ed anotac\u00ed
+FAMFAMFAM.DESC=Sada free 16x16 ikonek od FamFamFama 
 LOG4J.DESC=Knihovna pro logov\u00e1n\u00ed zpr\u00e1v
+MAMU.DESC=Ikonky MAME her
 ROTAXMAME.DESC=Sout\u011b\u017en\u00ed komunitn\u00ed port\u00e1l v hran\u00ed (nejen) MAME a Amiga her, inspirace pro tento program
 
-Licence.HEADER=P\u0159ehled licenc\u00ed t\u0159et\u00edch stran
-Licence.LINK=vice informaci
+Licence.HEADER=Licen\u010dn\u00ed smlouva
