--- a/src/cz/kojotak/arx/properties/Licence_en.properties
+++ b/src/cz/kojotak/arx/properties/Licence_en.properties
@@ -1,8 +1,7 @@
-EVENT_BUS.DESC=umoznuje posilat zpravy
+EVENT_BUS.DESC=Simple event processing framework for java using annotations
+FAMFAMFAM.DESC=Set of free 16x16 icons from FamFamFam
+SWING_X.DESC=Set of additional powerful swing components
+MAMU.DESC=MAME game icons
+CHM_PANE.DESC=Simple library for displaying help in chm format
 
-SWING_X.DESC=rozsirene komponenty do swingu
-
-CHM_PANE.DESC=zobrazovani napovedy
-
-Licence.HEADER=TODO prehled licenci
-Licence.LINK=more information
+Licence.HEADER=Software license agreement
