--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -2,6 +2,8 @@
 AmigaMode.DESC = Sout\u011b\u017een\u00ed v upraven\u00e9m WinUAE emulovan\u00fdch hr\u00e1ch
 AmigaMode.NAME = Amiga
 
+Application.SPLASHSCREEN_PROGRESS=importování databáze
+
 ArcadeMode.DESC = Sout\u011b\u017een\u00ed v automatovk\u00e1ch
 ArcadeMode.NAME = Automatovky
 
@@ -124,7 +126,7 @@ FilterTaskPane.PLATFORM=platforma
 
 DetailTaskPane.LABEL = detaily
 
-PreferencesTaskPane.TITLE=p\u0159izp\u016fsoben\u00ed
+PreferencesTaskPane.TITLE=přizpůsobení
 PreferencesTaskPane.POINTS=body
 PreferencesTaskPane.OPPONENT=protihr\u00e1\u010d
 PreferencesTaskPane.GAIN=mo\u017en\u00fd bodov\u00fd zisk
