prejmenovani sloupce poctu hracu

--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -67,7 +67,7 @@ MameSingleColumns.NAME = N\u00e1zev
 NoncompetetiveMode.DESC = Cel\u00e1 \u0159ada emul\u00e1tor\u016f a emulovan\u00fdch her
 NoncompetetiveMode.NAME = Nesout\u011b\u017en\u00ed
 
-PlayerCountColumn.NAME    = #\u2211
+PlayerCountColumn.NAME    = \u2211
 PlayerCountColumn.TOOLTIP = Celkov\u00fd po\u010det hr\u00e1\u010d\u016f dan\u00e9 hry
 
 PlayerDiffColumn.NAME    = +/-
