--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -51,7 +51,7 @@ HelpComboBox.LABEL=Help
 HelpComboBox.ROTAXMAME=RotaxMAME
 HelpComboBox.CREDITS=Credits
 HelpComboBox.LICENCE   = Licences
-PlayerCountColumn.NAME=#\u2211
+PlayerCountColumn.NAME=\u2211
 PlayerCountColumn.TOOLTIP=Celkov\u00fd po\u010det hr\u00e1\u010d\u016f dan\u00e9 hry
 
 CategoryColumn.NAME=C
