DB is downloaded before importing

--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -2,6 +2,7 @@
 AmigaMode.DESC = Sout\u011b\u017een\u00ed v upraven\u00e9m WinUAE emulovan\u00fdch hr\u00e1ch
 AmigaMode.NAME = Amiga
 
+Application.DOWNLOAD_PROGRESS=stahování databáze
 Application.SPLASHSCREEN_PROGRESS=importování databáze
 
 ArcadeMode.DESC = Sout\u011b\u017een\u00ed v automatovk\u00e1ch
