--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -7,6 +7,7 @@ PlayerListRenderer._NEW=Add
 AverageRatingsColumn.NAME=H%
 AverageRatingsColumn.TOOLTIP=Pr\u016fm\u011brn\u00e9 hodnocen\u00ed
 
+Application.DOWNLOAD_PROGRESS=downloading databáze
 Application.SPLASHSCREEN_PROGRESS=importing database
 
 FinishedColumn.NAME=F
