NoncompetetiveGame was removed

--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -133,4 +133,4 @@ UpdateComboBox.DATABASE=Records
 UpdateComboBox.PROGRAM=Program
 
 GenericEnumListRenderer.ALL=all
-Platform.ALL=all
+LegacyPlatform.ALL=all
