--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -95,10 +95,10 @@ PlatformIconColumn.NAME=P
 AmigaMode.NAME=Amiga
 AmigaMode.DESC=Sout\u011b\u017een\u00ed v upraven\u00e9m WinUAE emulovan\u00fdch hr\u00e1ch
 
-MameSingleMode.NAME=Arcade
+MameSingleMode.NAME=Single player
 MameSingleMode.DESC=Sout\u011b\u017een\u00ed v automatovk\u00e1ch
 
-TwoPlayerMode.NAME=Arcade 2P
+TwoPlayerMode.NAME=Two player
 TwoPlayerMode.DESC=Sout\u011b\u017een\u00ed v automatovk\u00e1ch ve dvou hr\u00e1\u010d\u00edch
 
 NoncompetetiveMode.NAME=Uncompetetive
@@ -133,4 +133,6 @@ UpdateComboBox.DATABASE=Records
 UpdateComboBox.PROGRAM=Program
 
 GenericEnumListRenderer.ALL=all
+
 LegacyPlatform.ALL=all
+LegacyPlatform.MAME=Arcade
