--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -5,8 +5,8 @@ AmigaMode.NAME = Amiga
 Application.DOWNLOAD_PROGRESS=stahování databáze
 Application.SPLASHSCREEN_PROGRESS=importování databáze
 
-ArcadeMode.DESC = Sout\u011b\u017een\u00ed v automatovk\u00e1ch
-ArcadeMode.NAME = Automatovky
+SinglePlayerMode.DESC = Sout\u011b\u017een\u00ed v automatovk\u00e1ch
+SinglePlayerMode.NAME = Hry
 
 AverageRatingsColumn.NAME    = H%
 AverageRatingsColumn.TOOLTIP = Pr\u016fm\u011brn\u00e9 hodnocen\u00ed
@@ -151,3 +151,4 @@ UpdateComboBox.PROGRAM=Programu
 GenericEnumListRenderer.ALL=v\u0161e
 
 LegacyPlatform.ALL=v\u0161e
+LegacyPlatform.MAME=Automaty
