zobrazeni sloupce s body

--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -100,6 +100,7 @@ RelativePositionColumn.NAME    = #%
 RelativePositionColumn.TOOLTIP = Relativn\u00ed um\u00edst\u011bn\u00ed v \u017eeb\u0159\u00ed\u010dku
 
 ScoreRecordColumn.NAME = sc\u00f3re
+ScorePointsColumn.NAME = body
 
 ScoreStatisticsColumn.NAME    = TOP
 ScoreStatisticsColumn.TOOLTIP = Nejlep\u0161\u00ed sk\u00f3re
