--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -31,7 +31,8 @@ RecordPositionWithIconColumn.NAME=#
 
 LegacyInfoColumns.NAME=H
 
-ScoreRecordColumn.NAME=sc\u00f3re
+ScoreRecordColumn.NAME=score
+ScorePointsColumn.NAME=points
 
 RecordPlayerColumn.NAME=hr\u00e1\u010d
 
