presun vyhledavani do filtru
fixes #49

--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -119,6 +119,7 @@ TwoPlayerMode.DESC = Sout\u011b\u017een\u00ed v automatovk\u00e1ch ve dvou hr\u0
 TwoPlayerMode.NAME = Dvojhry
 
 FilterTaskPane.TITLE = filtr
+FilterTaskPane.SEARCH = název
 FilterTaskPane.CATEGORY=kategorie
 FilterTaskPane.AVAILIBILITY=dostupnost
 FilterTaskPane.PLATFORM=platforma
