--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -105,6 +105,7 @@ TwoPlayerMode.DESC=Sout\u011b\u017een\u00ed v automatovk\u00e1ch ve dvou hr\u00e
 NoncompetetiveMode.NAME=Uncompetetive
 NoncompetetiveMode.DESC=Cel\u00e1 \u0159ada emul\u00e1tor\u016f a emulovan\u00fdch her
 
+FilterTaskPane.SEARCH = name
 FilterTaskPane.TITLE = filter
 FilterTaskPane.CATEGORY=category
 FilterTaskPane.AVAILIBILITY=availibility
