sloupec s poctem spoluhracu
fixes #25

--- a/src/cz/kojotak/arx/properties/Localization_en.properties
+++ b/src/cz/kojotak/arx/properties/Localization_en.properties
@@ -48,6 +48,8 @@ SettingsButton.LABEL=Nastaven\u00ed
 
 ChatButton.LABEL=Chat
 
+CoplayerCountColumn.NAME=coplayers
+
 CoplayerColumn.NAME=spoluhr\u00e1\u010d
 HelpComboBox.LABEL=Help
 HelpComboBox.ROTAXMAME=RotaxMAME
