--- a/src/cz/kojotak/arx/properties/Localization_cs.properties
+++ b/src/cz/kojotak/arx/properties/Localization_cs.properties
@@ -39,8 +39,10 @@ CategoryListRenderer.ALL = v\u0161echny kategorie
 
 ChatButton.LABEL = Chat
 
+CoplayerCountColumn.NAME=dvojher
+
 CoplayerColumn.TOOLTIP = druh\u00fd hr\u00e1\u010d
-CoplayerColumn.NAME = 2.H
+CoplayerColumn.NAME = spoluhráč
 
 FinishedColumn.NAME    = F
 FinishedColumn.TOOLTIP = Dohr\u00e1no do konce?
